--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -125,8 +125,8 @@ tbody:hover tr:hover td {
   </div>
   <hr class="mb-3">
   <div class="row menu">
-    <p id="only-admin" class=" only-admin mr-3"><a href="http://localhost:5000/index"><i class="fa fa-home fa-lg text-primary"></i></a></p>
-    <p id="logout-link" onclick="logout()" class="mr-3 ml-1"><a href="http://localhost:5000/login"><i id="sign-out" class="fa fa-sign-out fa-lg text-primary"></i></a></p>
+    <p id="only-admin" class=" only-admin mr-3"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/index"><i class="fa fa-home fa-lg text-primary"></i></a></p>
+    <p id="logout-link" onclick="logout()" class="mr-3 ml-1"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/login"><i id="sign-out" class="fa fa-sign-out fa-lg text-primary"></i></a></p>
   </div>
       <div id="only-admin-again">
   <h2 class="admin-text mt-3">Admin Panel</h2>
