--- a/views/cancel.ejs
+++ b/views/cancel.ejs
@@ -23,7 +23,7 @@
   </div>
   <hr class="mb-3">
   <div class="row menu">
-    <p id="only-admin" class=" only-admin mr-3"><a href="http://localhost:5000/index"><i class="fa fa-home fa-lg text-primary"></i></a></p>
+    <p id="only-admin" class=" only-admin mr-3"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/index"><i class="fa fa-home fa-lg text-primary"></i></a></p>
   </div>
     <h1>Donation Canceled</h1>
     <p>Your donation was canceled. Please try again.</p>
