--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,10 @@
   </div>
   <hr class="mb-3">
   <div class="row menu">
-    <p id="only-admin" class=" only-admin mr-3"><a href="http://localhost:5000/admin"><i class="fa fa-user-plus fa-lg text-primary"></i></a></p>    
+    <p id="only-admin" class=" only-admin mr-3"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/admin"><i class="fa fa-user-plus fa-lg text-primary"></i></a></p>    
     <p id="only-cart" onclick="openCart()" class="mr-3"><a class="text-success"><i class="fa fa-shopping-cart fa-lg text-primary"></i></a></p>
-    <p id="login-link" class="mr-3 ml-1"><a href="http://localhost:5000/login"><i id="sign-in" class="fa fa-sign-in fa-lg text-primary"></i></a></p>
-    <p id="logout-link" onclick="logout()" class="mr-3 ml-1"><a href="http://localhost:5000/index"><i id="sign-out" class="fa fa-sign-out fa-lg text-primary"></i></a></p>
+    <p id="login-link" class="mr-3 ml-1"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/login"><i id="sign-in" class="fa fa-sign-in fa-lg text-primary"></i></a></p>
+    <p id="logout-link" onclick="logout()" class="mr-3 ml-1"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/index"><i id="sign-out" class="fa fa-sign-out fa-lg text-primary"></i></a></p>
   </div>
   
 
