--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
   </div>
   <hr class="mb-3">
   <div class="row menu">
-    <p id="only-admin" class=" only-admin mr-3"><a href="http://localhost:5000/index"><i class="fa fa-home fa-lg text-primary"></i></a></p>  
+    <p id="only-admin" class=" only-admin mr-3"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/index"><i class="fa fa-home fa-lg text-primary"></i></a></p>  
   </div>
   <div id="message" class="mt-3 message text-center"></div>
   
@@ -42,7 +42,7 @@
     </div>
     <div class="row loginOrRegister">
       <button onmouseover="avoidLoginAttempt()" id="loginB" type="submit">Log me in</button>
-    <p id="register-link" class=" ml-3 mt-3 pt-3 text-danger"><a class="text-danger" href="http://localhost:5000/register">I need to Register</a></p>
+    <p id="register-link" class=" ml-3 mt-3 pt-3 text-danger"><a class="text-danger" href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/register">I need to Register</a></p>
     </div> 
   </form>
 </div>
