--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
   </div>
   <hr class="mb-3">
   <div class="row menu">
-    <p id="only-admin" class=" only-admin mr-3"><a href="http://localhost:5000/index"><i class="fa fa-home fa-lg text-primary"></i></a></p> 
+    <p id="only-admin" class=" only-admin mr-3"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/index"><i class="fa fa-home fa-lg text-primary"></i></a></p> 
   </div>
 
   <div id="message" class="mt-3 message text-center"></div>
@@ -45,7 +45,7 @@
     </div>
     <div class="row loginOrRegister">
     <button id="registerB" onmouseover="avoidRegisterAttempt()" type="submit">Register me</button>
-    <p id="login-link" class="mt-3 pt-3 text-danger"><a class="text-danger" href="http://localhost:5000/login">I need to Login</a></p>
+    <p id="login-link" class="mt-3 pt-3 text-danger"><a class="text-danger" href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/login">I need to Login</a></p>
     </div>
   </form>
 </div>
