--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,7 @@
         <div id="cart-items"></div>
         <p class="text-success the-total mt-2">Total: $<span id="total-amount">0</span></p>
         <button id="checkout-button" class="check-out-button" onclick="checkout()">Checkout</button>
+        <p class="mt-3 text centered text-danger">For Testing, please use credit Card#: 4242 4242 4242 4242</p>
     </div>
     <div id="message" class="mt-3 message text-center"></div>
     <div id="candidates" class="container wrapper mt-3"></div>
