--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
         <p class="text-success the-total mt-2">Total: $<span id="total-amount">0</span></p>
         <button id="checkout-button" class="check-out-button" onclick="checkout()">Checkout</button>
         <hr class="mt-3" style="color: red">
-        <p class="mt-3 text centered text-danger">Testing Card#: 4242 4242 4242 4242</p>
+        <p class="mt-3 text centered text-danger">During checkout use Testing Card#: 4242 4242 4242 4242</p>
     </div>
     <div id="message" class="mt-3 message text-center"></div>
     <div id="candidates" class="container wrapper mt-3"></div>
