--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -133,7 +133,7 @@ tbody:hover tr:hover td {
   <div class="row add-candidate mt-3">
     <div class="col-lg-6 col-md-6 col-sm-12">
   <h4 class="admin-text red">Add Candidate</h4>
-  <div id="message" class="mt-3"></div>
+  <div id="message" class="mt-3 message text-center"></div>
   <form id="candidateForm" enctype="multipart/form-data">
     <div class="form-group">
       <label for="name">Name:</label>
