--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -271,6 +271,44 @@ async function loadDonations() {
 
   }
   </script>
+  <script>
+    function ckeckName() {
+    const theName = document.getElementById("name").value;
+
+    if (theName.length < 2 || theName.length > 20) {
+        sendErrorMessage('Please enter a name of at least 2 characters and not more than 20 characters');
+        myCloseMessageFunction();
+    }
+}
+
+function ckeckDescription() {
+    const theDescription = document.getElementById("description").value;
+
+    if (theDescription.length < 2 || theDescription.length > 20) {
+        sendErrorMessage('Please enter a description of at least 2 characters and not more than 20 characters');
+        myCloseMessageFunction();
+    }
+}
+
+function ckeckPicture() {
+    const thePicture = document.getElementById("picture").value;
+    const filePath = thePicture.value;
+    const allowedExtensions = /(\.jpg|\.jpeg|\.png|\.gif)$/i;
+
+    if (!filePath) {
+        sendErrorMessage('Please upload a picture');
+        myCloseMessageFunction();
+        return;
+    }
+
+    if (!allowedExtensions.exec(filePath)) {
+        sendErrorMessage('Please upload a picture of type .gif, .png, .jpg, or .jpeg');
+        myCloseMessageFunction();
+        fileInput.value = ''; // Clear the input
+        return;
+    }
+}
+  </script>
   <script src="scripts/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
