--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -137,15 +137,16 @@ tbody:hover tr:hover td {
   <form id="candidateForm" enctype="multipart/form-data">
     <div class="form-group">
       <label for="name">Name:</label>
-      <input onfocusout="checkName()" type="text" class="form-control" id="name" name="name" required>
+      <input onblur="checkName()" type="text" class="form-control" id="name" name="name" required>
     </div>
     <div class="form-group">
       <label for="description">Position:</label>
-      <input onfocusout="checkDescription()" type="text" class="form-control" id="description" name="description" required>
+
+      <input onblur="checkDescription()" type="text" class="form-control" id="description" name="description" required>
     </div>
     <div class="form-group">
       <label for="picture">Picture:</label>
-      <input onfocusout="checkPicture()" type="file" class="form-control" id="picture" name="picture" accept="image/*" required>
+      <input onblur="checkPicture()" type="file" class="form-control" id="picture" name="picture" accept="image/*" required>
     </div>
     <button onmouseover="avoidNewCandidateAttempt()" id="addCandidateButton" type="submit" class="btn btn-primary mt-3">Add Candidate</button>
   </form>
@@ -272,7 +273,7 @@ async function loadDonations() {
   }
   </script>
   
-  <script src="scripts/main.js"></script>
+  <script src="public/scripts/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
