--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,7 @@
     <div id="app-heading" class="app-heading col-12">
       <h1 class="text-danger app-heading-h1 londrina-solid-black">Fund the Patriots</h1>
       
-      <p class="lead app-heading-h1 mr-2 text-primary">Those that donate seem to rule ...Donate!</p>
+      <p class="lead app-heading-h1 mr-2">Those that donate seem to rule ...Donate!</p>
     </div>
   </div>
   <hr class="mb-3">
