--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,8 @@
     </div>
     <div class="row loginOrRegister">
       <button onmouseover="avoidLoginAttempt()" id="loginB" type="submit">Log me in</button>
-    <p id="register-link" class=" ml-3 mt-3 pt-3 text-danger"><a class="text-danger" href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/register">I need to Register</a></p>
+      <p id="only-admin" class=" only-admin mr-3"><a href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/admin"><i class="fa fa-user-plus fa-lg text-primary"></i></a></p>
+      <p id="register-link" class=" ml-3 mt-3 pt-3 text-danger"><a class="text-danger" href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/register">I need to Register</a></p>
     </div> 
   </form>
 </div>
