hide admin link

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,19 @@
     </div> 
   </form>
 </div>
+  <script>
+    let token = localStorage.getItem('token');
 
+if (token) {
+            let role = JSON.parse(atob(token.split('.')[1])).user.role;
+            if (role !== 'admin') {
+
+      document.getElementById('only-admin').style.display = 'none'; 
+    }
+    }
+
+  
+  </script>
   <script>
     document.getElementById('loginForm').addEventListener('submit', async (event) => {
       event.preventDefault();
