onclick from onmouseover change

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
       <input onblur="passwordCheck()" class="mt-2" type="password" id="password" name="password" required>
     </div>
     <div class="row loginOrRegister">
-      <button onmouseover="avoidLoginAttempt()" id="loginB" type="submit">Log me in</button>
+      <button onclick="avoidLoginAttempt()" id="loginB" type="submit">Log me in</button>
       <p id="register-link" class=" ml-3 mt-3 pt-3 text-danger"><a class="text-danger" href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/register">I need to Register</a></p>
     </div> 
   </form>
