onclick from onmouseover change back

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -148,7 +148,7 @@ tbody:hover tr:hover td {
       <label for="picture">Picture:</label>
       <input onchange="checkFileType()" type="file" class="form-control" id="picture" name="picture" accept="image/*" required>
     </div>
-    <button onclick="avoidNewCandidateAttempt()" id="addCandidateButton" type="submit" class="btn btn-primary mt-3">Add Candidate</button>
+    <button onmouseover="avoidNewCandidateAttempt()" id="addCandidateButton" type="submit" class="btn btn-primary mt-3">Add Candidate</button>
   </form>
   </div>
   </div>
