--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,7 +44,7 @@
       <input onblur="passwordCheck()" type="password" id="password" name="password" required>
     </div>
     <div class="row loginOrRegister">
-    <button id="registerB" onclick="avoidRegisterAttempt()" type="submit">Register me</button>
+    <button id="registerB" onmouseover="avoidRegisterAttempt()" type="submit">Register me</button>
     <p id="login-link" class="mt-3 pr-2 pt-3 text-danger"><a class="text-danger" href="https://fundthepatriots-cc3c434c08a8.herokuapp.com/login">I need to Login</a></p>
     </div>
   </form>
